[package]
name = "strictstring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
eyre = "0.6.8"
serde_json = "1.0.107"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
